--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,3 +26,13 @@ steps:
 
 - task: PublishBuildArtifacts@1
   displayName: 'publish artifacts'
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet publish $(buildConfiguration)'
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
+
+- task: PublishBuildArtifacts@1
+  displayName: 'publish artifacts'
